--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@y-sweet/client": "^0.1.0",
     "@y-sweet/sdk": "^0.1.0",
     "next": "14.2.1",
+    "rc-tree": "^5.8.5",
     "react": "^18",
     "react-dom": "^18",
     "y-monaco": "^0.1.5",
