--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "rc-tree": "^5.8.5",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^9.0.1",
+    "remark-gfm": "^4.0.0",
     "y-monaco": "^0.1.5",
     "y-sweet": "^0.1.1",
     "yjs": "^13.6.14"
