--- a/package.json
+++ b/package.json
@@ -12,12 +12,16 @@
     "@monaco-editor/react": "^4.6.0",
     "@y-sweet/client": "^0.1.0",
     "@y-sweet/sdk": "^0.1.0",
+    "axios": "^1.6.8",
     "next": "14.2.1",
+    "next-auth": "^4.24.7",
     "rc-tree": "^5.8.5",
     "react": "^18",
     "react-dom": "^18",
     "react-markdown": "^9.0.1",
+    "recoil": "^0.7.7",
     "remark-gfm": "^4.0.0",
+    "swr": "^2.2.5",
     "y-monaco": "^0.1.5",
     "y-sweet": "^0.1.1",
     "yjs": "^13.6.14"
